data/manifests/apps/traefik.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: redirectscheme
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: ( Host(`${HL_CLUSTER_EXTERNAL_DOMAIN}`) || Host(`${HL_CLUSTER_INTERNAL_DOMAIN}`) ) && (PathPrefix(`/dashboard`)) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
